# rules_unreal_engine

./: .bazel_fix_commands.json  .bazelrc  .bazelrc.user.template  .gitignore  BUILD  BUILD.bazel  CLAUDE.md  CURRENT_WORK.md  MODULE.bazel  README.md  WORKSPACE  current-context.md  dagger.json  deps.bzl  docker-compose.yml  engine.bzl  go.mod  go.sum  justfile  main.go  parse-xml-cli.ts  rules.bzl  rules_test.bzl  shas.db
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: build.yml
.test_ue/: README.md
bzl/: BUILD.bazel  README.md  config.bzl  module.bzl  providers.bzl  test_providers.bzl  ue_binary.bzl  ue_cc_module.bzl  ue_module_info.bzl  uht.bzl  uht_all.bzl
cmd/: BUILD.bazel  exit.go  extract.go  gitDeps.go  printUrls.go  root.go  shas.go  uht.go  xml.go  xml_test.go
cmd/uhtscan/: BUILD.bazel  main.go
dagger/: go.mod  main.go
docs/: BLOCKERS.md  DEVELOPMENT_WORKFLOW.md  GO_UHT_NOTES.md  MODULE_ROADMAP.md  PLAN.md  UE_COMPILER_FLAGS.md  UHT_INTEGRATION_PLAN.md  UHT_STATUS.md  USAGE.md  effort-estimate.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-use-deno-typscript-for-all-scripting-and-bazel-adjacent-work.md
examples/: Core_BUILD.bazel
internal/repo/: deps.bzl  rule.bzl
parse-xml/: README.md  index.ts
parse-xml/lib/: manifest.ts
pkg/gitDeps/: BUILD.bazel  constants.go  gitDeps.go  gitDeps_test.go  sql.go  sql_test.go  test.xml  working-manifest-test.xml  xml.go  xml_test.go
pkg/uht/: BUILD.bazel  manifest.go  manifest_all.go  scan.go
test/: README.md  README.old.md  build_core.bats  gitdeps.bats  install_builds.bats  integration.bats  run_all.sh  ue_module.bats  uht.bats
test/integration/minimal/: BUILD.bazel  MODULE.bazel
test/module/: build_core.bats  ue_module.bats
test/module/fixtures/: Dependent.cpp  Dependent.h  Platform.cpp  TestUEFlags.cpp
test/module_rule_test/: BUILD.bazel  Platform.h  Simple.cpp  Simple.h  TestUEFlags.cpp
test/test/module/real_ue_test/: BUILD.bazel
test/test/module/real_ue_test/Private/: TraceLog.cpp
test/test/module/real_ue_test/Public/: TraceLog.h
test/uht_test/: MODULE.bazel
test/unit/: gitdeps.bats
test/verification/circular_deps/: BUILD.bazel  main.cpp
test/verification/circular_deps/module_a/: a.cpp  a.h
test/verification/circular_deps/module_b/: b.cpp  b.h
test/verification/providers/: BUILD.bazel
test/verification/uht/simple_enum/: BUILD.bazel  MODULE.bazel  TestModule.uhtmanifest  TestPlain.uhtmanifest  TestProject.uproject  test_compile_empty.cpp
test/verification/uht/simple_enum/Private/: TestModule.cpp
test/verification/uht/simple_enum/Public/: PlainClass.h  TestEnum.h
tools/: BUILD.bazel  install_builds.sh  uht_wrapper.sh
tools/buildcs-to-bazel/: BUILD.bazel  BuildCsToBazel.csproj  Program.cs
tools/buildcs-to-bazel/Emitting/: StarlarkEmitter.cs
tools/buildcs-to-bazel/Models/: ModuleInfo.cs
tools/buildcs-to-bazel/Parsing/: BuildCsParser.cs
tools/buildcs-to-bazel/Resolution/: ModulePathResolver.cs
tools/buildcs-to-bazel/Tests/: EmitterTests.cs  ParserTests.cs  ResolverTests.cs  Tests.csproj
ue_modules/: README.md
ue_modules/Runtime/AutoRTFM/: BUILD.bazel
ue_modules/Runtime/BuildSettings/: BUILD.bazel
ue_modules/Runtime/Core/: BUILD.bazel  README.md
ue_modules/Runtime/CorePreciseFP/: BUILD.bazel
ue_modules/Runtime/CoreUObject/: BUILD.bazel
ue_modules/Runtime/ImageCore/: BUILD.bazel
ue_modules/Runtime/Json/: BUILD.bazel
ue_modules/Runtime/Launch/: BUILD.bazel
ue_modules/Runtime/Net/Common/: BUILD.bazel
ue_modules/Runtime/Networking/: BUILD.bazel
ue_modules/Runtime/OodleDataCompression/: BUILD.bazel
ue_modules/Runtime/Projects/: BUILD.bazel
ue_modules/Runtime/SandboxFile/: BUILD.bazel
ue_modules/Runtime/Sockets/: BUILD.bazel
ue_modules/Runtime/TraceLog/: BUILD.bazel
