module(
    name = "rules_unreal_engine",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_go", version = "0.58.3")
bazel_dep(name = "gazelle", version = "0.46.0")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)

unreal_engine = use_repo_rule("//internal/repo:rule.bzl", "unreal_engine")

unreal_engine(
    name = "unreal_engine",
    commit = "kreempuff-release",
    #    git_repository = "https://github.com/kreempuff/UnrealEngine.git",
    git_repository = "file:///Users/kareemmarch/Projects/UnrealEngine",
)
