module(
    name = "rules_unreal_engine",
    version = "0.0.1",
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")

# Go dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_sirupsen_logrus",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
)

# Set up Unreal Engine source repository for ue_module testing
# Default: Public fork (for CI)
# Override: Set UE_GIT_URL env var to point to your local clone
#   Example in .bazelrc.user: common --repo_env=UE_GIT_URL=file:///Users/you/Projects/UnrealEngine
unreal_engine = use_repo_rule("//internal/repo:rule.bzl", "unreal_engine")

unreal_engine(
    name = "unreal_engine_source",
    git_repository = "https://github.com/kreempuff/UnrealEngine.git",
    commit = "kreempuff-release",
    use_bazel_downloader = True,
)
