load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "gitDeps.go",
        "root.go",
    ],
    importpath = "kreempuff.dev/rules-unreal-engine/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gitDeps",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)
