load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = [
        "exit.go",
        "extract.go",
        "gitDeps.go",
        "printUrls.go",
        "root.go",
        "uht.go",
    ],
    importpath = "kreempuff.dev/rules-unreal-engine/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/gitDeps",
        "//pkg/uht",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
    ],
)
