load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "gitDeps",
    srcs = [
        "constants.go",
        "gitDeps.go",
        "xml.go",
    ],
    importpath = "kreempuff.dev/rules-unreal-engine/pkg/gitDeps",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:logrus"],
)

go_test(
    name = "gitDeps_test",
    srcs = [
        "gitDeps_test.go",
        "xml_test.go",
    ],
    embed = [":gitDeps"],
    embedsrcs = ["working-manifest-test.xml"],
    deps = ["@com_github_stretchr_testify//assert"],
)
