"""Unreal Engine BuildSettings module.

Provides build-time configuration and version information.
Contains ENGINE_VERSION, BUILD_VERSION, etc.

Converted from: Engine/Source/Runtime/BuildSettings/BuildSettings.Build.cs
"""

load("@rules_unreal_engine//bzl:module.bzl", "ue_module")

ue_module(
    name = "BuildSettings",

    # From BuildSettings.Build.cs
    # Dynamic build-time defines (UBT generates these at compile time)
    local_defines = [
        "SUPPRESS_PER_MODULE_INLINE_FILE",

        # Build metadata (stub values for now)
        # TODO: Generate these dynamically from git/version files
        'BUILD_SOURCE_URL=\\"https://github.com/EpicGames/UnrealEngine\\"',
        'BUILD_USER=\\"bazel\\"',
        'BUILD_USERDOMAINNAME=\\"localhost\\"',
        'BUILD_MACHINENAME=\\"bazel_build\\"',

        # Engine version (stub values for UE 5.4)
        # TODO: Extract from Engine/Source/Runtime/Launch/Resources/Version.h
        "ENGINE_VERSION_MAJOR=5",
        "ENGINE_VERSION_MINOR=4",
        "ENGINE_VERSION_PATCH=0",
        "ENGINE_VERSION_HOTFIX=0",
        'ENGINE_VERSION=\\"5.4.0\\"',
        'ENGINE_VERSION_STRING=\\"5.4.0-bazel\\"',

        # Build type flags
        "ENGINE_IS_LICENSEE_VERSION=0",
        "ENGINE_IS_PROMOTED_BUILD=0",
        "UE_WITH_DEBUG_INFO=0",

        # Build changelist
        "CURRENT_CHANGELIST=0",
        "COMPATIBLE_CHANGELIST=0",
        'BRANCH_NAME=\\"main\\"',
        'BUILD_VERSION=\\"5.4.0-bazel\\"',

        # VFS and allocator settings
        "UE_PERSISTENT_ALLOCATOR_RESERVE_SIZE=0",
        'UE_VFS_PATHS=\\"\\"',
    ],
    module_type = "Runtime",

    # From BuildSettings.Build.cs: PrivateIncludePathModuleNames.Add("Core")
    # Needs Core headers but doesn't link (header-only dependency)
    public_deps = ["//Engine/Source/Runtime/Core:Core_headers"],
    visibility = ["//visibility:public"],
)
