"""Unreal Engine Core module.

Core is the foundation module for all of UE. It provides:
- Platform abstraction (HAL)
- Containers (TArray, TMap, etc.)
- Math types (FVector, FMatrix, etc.)
- Memory management
- Threading primitives
- File I/O

Converted from: Engine/Source/Runtime/Core/Core.Build.cs
"""

load("@rules_unreal_engine//bzl:module.bzl", "ue_module")
load("@rules_cc//cc:defs.bzl", "cc_library")

# Core headers-only target (breaks circular dependency with TraceLog)
cc_library(
    name = "Core_headers",
    hdrs = glob(
        [
            "Public/**/*.h",
            "Public/**/*.hpp",
            "Public/**/*.inl",
            "Internal/**/*.h",
            "Private/**/*.h",
        ],
        allow_empty = True,
    ),
    includes = ["Public", "Internal", "Private"],
    defines = [
        "UE_BUILD_DEVELOPMENT=1",
        "UE_BUILD_DEBUG=0",
        "UE_BUILD_TEST=0",
        "UE_BUILD_SHIPPING=0",
        "WITH_EDITOR=0",
        "WITH_ENGINE=1",
        "WITH_UNREAL_DEVELOPER_TOOLS=0",
        "WITH_PLUGIN_SUPPORT=1",
        "IS_MONOLITHIC=0",
        "IS_PROGRAM=0",
        "CORE_API=",
    ] + select({
        "@platforms//os:macos": [
            "UBT_COMPILED_PLATFORM=Mac",
            "PLATFORM_MAC=1",
            "PLATFORM_APPLE=1",
        ],
        "@platforms//os:linux": [
            "UBT_COMPILED_PLATFORM=Linux",
            "PLATFORM_LINUX=1",
            "PLATFORM_UNIX=1",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)

# Full Core module (implementation)
ue_module(
    name = "Core",
    module_type = "Runtime",

    # Unity build pattern: lz4.cpp is included by lz4hc.cpp, not compiled separately
    # Temporarily exclude problematic files
    exclude_srcs = [
        "Private/Compression/lz4.cpp",  # Unity build: included by lz4hc.cpp
        "Private/HAL/ConsoleManager.cpp",  # TODO: Fix FConsoleManager header visibility
        "Private/HAL/MallocTBB.cpp",  # TODO: Add IntelTBB dependency
        "Private/HAL/MallocJemalloc.cpp",  # Linux-specific allocator
        "Private/HAL/MallocMimalloc.cpp",  # Windows/Linux allocator
        # Files needing Runtime/Launch/Resources/Version.h
        "Private/Misc/App.cpp",
        "Private/Misc/ConfigManifest.cpp",
        "Private/Misc/EngineVersion.cpp",
        "Private/FramePro/FrameProProfiler.cpp",
        # Other module dependencies
        "Private/Misc/CoreMisc.cpp",  # TODO: Needs DerivedDataCache module
        "Private/Misc/ObjectThumbnail.cpp",  # TODO: Needs ImageCore module
        "Private/Serialization/Archive.cpp",  # TODO: Needs TargetPlatform module
        "Private/Serialization/MemoryImage.cpp",  # TODO: Needs TargetPlatform module
    ],
    additional_hdrs = ["Private/Compression/lz4.cpp"],  # Unity build: included by lz4hc.cpp

    # From Core.Build.cs: PublicDependencyModuleNames
    # Note: Core_headers is for EXTERNAL modules to depend on
    # Core itself auto-discovers its own headers via ue_module
    public_deps = [
        "//Engine/Source/Runtime/TraceLog",
        "//Engine/Source/ThirdParty/GuidelinesSupportLibrary",
        "//Engine/Source/ThirdParty/AtomicQueue",
    ],

    # From Core.Build.cs: PrivateDependencyModuleNames
    private_deps = [
        "//Engine/Source/Runtime/BuildSettings",
        "//Engine/Source/Runtime/AutoRTFM",
        "//Engine/Source/ThirdParty/BLAKE3",
        "//Engine/Source/Runtime/OodleDataCompression",
        "//Engine/Source/ThirdParty/xxhash",
        "//Engine/Source/ThirdParty/PLCrashReporter",  # Mac crash reporting (Mac only via target_compatible_with)
        # TODO: Platform-specific dependencies:
        # - mimalloc (Windows/Linux allocator)
        # - IntelTBB (threading library)
        # - jemalloc (alternative allocator)
    ],

    # Additional include paths for subdirectories
    # MiMalloc.c needs to find IncludeMiMalloc.h in same directory
    # ApplePlatformRunnableThread.h uses absolute path "Runtime/Core/Private/..."
    private_includes = [
        "Private/Thirdparty",
        "../..",  # Engine/Source (for absolute-style includes like "Runtime/Core/Private/...")
    ],

    visibility = ["//visibility:public"],
)
