"""Unreal Engine Core module.

Core is the foundation module for all of UE. It provides:
- Platform abstraction (HAL)
- Containers (TArray, TMap, etc.)
- Math types (FVector, FMatrix, etc.)
- Memory management
- Threading primitives
- File I/O

Converted from: Engine/Source/Runtime/Core/Core.Build.cs
"""

load("@rules_unreal_engine//bzl:module.bzl", "ue_module")
load("@rules_cc//cc:defs.bzl", "cc_library")

# Core module
# Note: Core_headers is now auto-created by ue_module (all modules get _headers targets)
ue_module(
    name = "Core",
    module_type = "Runtime",

    # Unity build pattern: lz4.cpp is included by lz4hc.cpp, not compiled separately
    # Exclude files requiring other modules to be fully built (7 remaining)
    exclude_srcs = [
        "Private/Compression/lz4.cpp",  # Unity build: included by lz4hc.cpp
        "Private/HAL/ConsoleManager.cpp",  # TODO: Fix FConsoleManager header visibility
        "Private/HAL/MallocTBB.cpp",  # TODO: Build IntelTBB module
        "Private/HAL/MallocJemalloc.cpp",  # Linux-specific allocator
        "Private/HAL/MallocMimalloc.cpp",  # Windows/Linux allocator
        "Private/Misc/CoreMisc.cpp",  # TODO: Build DerivedDataCache module (needs DERIVEDDATACACHE_API)
        "Private/Misc/ObjectThumbnail.cpp",  # TODO: Build ImageCore module (needs IMAGECORE_API)
        "Private/Serialization/Archive.cpp",  # TODO: Build TargetPlatform module (needs TARGETPLATFORM_API)
        "Private/Serialization/MemoryImage.cpp",  # TODO: Build TargetPlatform module
    ],
    additional_hdrs = ["Private/Compression/lz4.cpp"],  # Unity build: included by lz4hc.cpp

    # From Core.Build.cs: PublicDependencyModuleNames
    # Note: Core_headers is for EXTERNAL modules to depend on
    # Core itself auto-discovers its own headers via ue_module
    public_deps = [
        "//Engine/Source/Runtime/TraceLog",
        "//Engine/Source/ThirdParty/GuidelinesSupportLibrary",
        "//Engine/Source/ThirdParty/AtomicQueue",
    ],

    # From Core.Build.cs: PrivateDependencyModuleNames
    private_deps = [
        "//Engine/Source/Runtime/BuildSettings",
        "//Engine/Source/Runtime/AutoRTFM",
        "//Engine/Source/Runtime/Launch",  # Minimal header-only (just Version.h)
        "//Engine/Source/Runtime/ImageCore",  # Minimal header-only
        "//Engine/Source/Developer/TargetPlatform",  # Minimal header-only
        "//Engine/Source/ThirdParty/BLAKE3",
        "//Engine/Source/Runtime/OodleDataCompression",
        "//Engine/Source/ThirdParty/xxhash",
        "//Engine/Source/ThirdParty/PLCrashReporter",  # Mac crash reporting (Mac only via target_compatible_with)
        # TODO: Platform-specific dependencies:
        # - mimalloc (Windows/Linux allocator)
        # - IntelTBB (threading library)
        # - jemalloc (alternative allocator)
    ],

    # Additional include paths for subdirectories
    # MiMalloc.c needs to find IncludeMiMalloc.h in same directory
    # ApplePlatformRunnableThread.h uses absolute path "Runtime/Core/Private/..."
    private_includes = [
        "Private/Thirdparty",
        "../..",  # Engine/Source (for absolute-style includes like "Runtime/Core/Private/...")
    ],

    visibility = ["//visibility:public"],
)
