"""Unreal Engine ImageCore module.

Lightweight image types (FImage, FImageView, ERawImageFormat).
Used by Core for ObjectThumbnail and by many other modules.

Converted from: Engine/Source/Runtime/ImageCore/ImageCore.Build.cs
"""

load("@rules_unreal_engine//bzl:module.bzl", "ue_module")

ue_module(
    name = "ImageCore",
    module_type = "Runtime",
    public_deps = [
        "//UnrealEngine/Engine/Source/Runtime/Core:Core_headers",
    ],
    private_deps = [
        "//UnrealEngine/Engine/Source/Runtime/CoreUObject:CoreUObject_headers",
    ],
    # TODO: Add stb_image_resize2 ThirdParty dep
    visibility = ["//visibility:public"],
)
